--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,12 @@
             android:label="Camera"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+        <activity
+            android:name=".gui.ReportPagerActivity"
+            android:label="Reports"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+
     </application>
 
 </manifest>
