--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,28 +8,36 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".gui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
         <activity
             android:name=".gui.EditActivity"
             android:label="Edit Data"
             android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-        <activity android:name=".gui.Login_Register_Activity"
-                  android:screenOrientation="portrait">
+
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <activity
+            android:name=".gui.Login_Register_Activity"
+            android:screenOrientation="portrait">
+        </activity>
+
         <activity
             android:name=".gui.CameraActivity"
             android:label="Camera"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
+
         <activity
             android:name=".gui.ReportPagerActivity"
             android:label="Reports"
