--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
+
 
         <activity
             android:name=".gui.MainActivity"
@@ -17,37 +18,45 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
+
+
+
+
         <activity
             android:name=".gui.EditActivity"
-            android:label="Edit Data"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-
-
-
         </activity>
+
+
 
         <activity
             android:name=".gui.Login_Register_Activity"
-            android:screenOrientation="portrait">
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+            <!--android:screenOrientation="portrait"-->
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-
-
 
 
 
         <activity
             android:name=".gui.CameraActivity"
-            android:label="Camera"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
+
+
         <activity
             android:name=".gui.ReportPagerActivity"
-            android:label="Reports"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
